<resources>
    <string name="app_title">"Reminder"</string>
    <string name="app_name">"Reminder"</string>
    <string name="app_name_pro">"Reminder PRO"</string>
    <string name="action_settings">"Settings"</string>
    <string name="copyright">2024 © Nazar Sukhovych</string>
    <string name="cant_access_location_services">I can not get access to the location services!</string>
    <string name="normal">Normal</string>
    <string name="satellite">Satellite</string>
    <string name="terrain">Terrain</string>
    <string name="hybrid">Hybrid</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="yellow">Yellow</string>
    <string name="pink">Pink</string>
    <string name="action">Action</string>
    <string name="make_call">Make call</string>
    <string name="sms">Send SMS</string>
    <string name="phone">Phone number</string>
    <string name="birthdays">Birthdays</string>
    <string name="check_automatically">Check automatically</string>
    <string name="interval">Interval</string>
    <string name="import_string">Import</string>
    <string name="google_drive">Google Drive™</string>
    <string name="dropbox">Dropbox</string>
    <string name="notes">Notes</string>
    <string name="task">Task</string>
    <string name="note">Note</string>
    <string name="save">Save</string>
    <string name="show_in_status_bar">Show in status bar?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add_reminder">Add reminder?</string>
    <string name="name">Name</string>
    <string name="background">Background</string>
    <string name="global_settings">Global settings</string>
    <string name="vibrate">Vibrate</string>
    <string name="infinite_vibrate">Infinite vibrate</string>
    <string name="sound_in_silent_mode">Sound in silent mode</string>
    <string name="infinite_sound">Infinite sound (repeating)</string>
    <string name="melody">Melody</string>
    <string name="melody_x">"Melody %s"</string>
    <string name="voice_notification">Notify by voice (TTS)</string>
    <string name="language">Language</string>
    <string name="led_notification">LED notification</string>
    <string name="led_color">LED color</string>
    <string name="remind_at">Remind at</string>
    <string name="days_to_birthday">Days to birthday</string>
    <string name="permanent_status_bar_notification">Permanent notification in status bar</string>
    <string name="show_in_home_screen">Show in home screen widget</string>
    <string name="birthday_reminder">Birthday reminder</string>
    <string name="contacts">Contacts</string>
    <string name="no_events">No events</string>
    <string name="theme">Theme</string>
    <string name="calendar">Calendar</string>
    <string name="title">Title</string>
    <string name="color">Color</string>
    <string name="files">Files</string>
    <string name="delete_all">Delete all</string>
    <string name="search">Search</string>
    <string name="text_size">Text size</string>
    <string name="exclusion">Exclusion</string>
    <string name="hours">Hours</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="message">Message</string>
    <string name="date_and_time">Date and time</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="time">Time</string>
    <string name="google_tasks">Google Tasks</string>
    <string name="add_to_calendar">Add to Calendar</string>
    <string name="address">Address</string>
    <string name="no_places">No places</string>
    <string name="tasks">Tasks</string>
    <string name="groups">Groups</string>
    <string name="places">Places</string>
    <string name="backup_files">Backup files</string>
    <string name="trash">Trash</string>
    <string name="feedback">Feedback</string>
    <string name="help">Help</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="no_notes">No notes</string>
    <string name="next_event">Next event</string>
    <string name="remind_me">Remind me…</string>
    <string name="repeat">Repeat</string>
    <string name="days">days</string>
    <string name="send">Send</string>
    <string name="radius">Radius</string>
    <string name="can_you_rate_this_application">Can you rate this application?</string>
    <string name="rate">Rate</string>
    <string name="later">Later</string>
    <string name="never">Never</string>
    <string name="url">Url…</string>
    <string name="application">Application</string>
    <string name="open_link">Open link</string>
    <string name="select_day">Select day</string>
    <string name="last_day">Last day</string>
    <string name="delay_tracking">Delay tracking</string>
    <string name="no_reminder">No reminder</string>
    <string name="c">S</string>
    <string name="m">M</string>
    <string name="h">H</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="sun">SUN</string>
    <string name="import_events">Import events</string>
    <string name="first_day">First day</string>
    <string name="today_color">Color for today</string>
    <string name="birthdays_color">Color for birthdays</string>
    <string name="show_reminders">Show reminders</string>
    <string name="reminders_color">Color for reminder</string>
    <string name="feature_events">Future events</string>
    <string name="show_calculated_feature_events">Show calculated future events in calendar</string>
    <string name="export_to_google_calendar">Export to Google Calendar</string>
    <string name="event_duration">Event duration</string>
    <string name="choose_calendar">Choose calendar</string>
    <string name="export_to_stock_calendar">Export to default calendar</string>
    <string name="automatically_backup">Automatically backup</string>
    <string name="cloud_services">Cloud services</string>
    <string name="clean">Clear data</string>
    <string name="backup_settings">Create backup of settings</string>
    <string name="_24_hour_time_format">24 hour</string>
    <string name="smart_fold">Intelligent folding</string>
    <string name="disable_folding_reminder_window">Disable intelligent folding of reminder window</string>
    <string name="android_wear_notification">Wear OS notification</string>
    <string name="distance_notification">Notification about distance</string>
    <string name="map_type">Type of map</string>
    <string name="style_of_marker">Style of marker</string>
    <string name="tracking_settings">Tracking settings</string>
    <string name="enable_creating_reminder_for_quick_note">Create reminder for quick note</string>
    <string name="quick_note_reminder">Reminder</string>
    <string name="appearance">Appearance</string>
    <string name="status_bar">Status bar</string>
    <string name="manual_remove">Remove manually</string>
    <string name="allow_removing_notification_manually">Allow removing notification manually</string>
    <string name="permanent_notification">Permanent notification</string>
    <string name="show_icon">Show icon</string>
    <string name="sound_and_vibration">Sound and vibration</string>
    <string name="loudness">Loudness</string>
    <string name="notification">Notification</string>
    <string name="unlock_screen">Unlock screen</string>
    <string name="send_sms">Send SMS</string>
    <string name="enable_sending_sms_automatically">Enable sending SMS automatically</string>
    <string name="launch_application">Launch application</string>
    <string name="enable_launching_application_automatically">Launch applications automatically</string>
    <string name="snooze_time">Snooze time</string>
    <string name="repeat_notification">Repeating of notification</string>
    <string name="personalization">Personalization</string>
    <string name="allow_customizing_notification">Allow customizing notification for each reminder</string>
    <string name="permissions">Permissions</string>
    <string name="allow_permission">Add permission</string>
    <string name="about">About</string>
    <string name="open_source_licenses">Open source software</string>
    <string name="tell_friends">Tell friends</string>
    <string name="default_string">Default</string>
    <string name="morning">Morning</string>
    <string name="day">Day</string>
    <string name="evening">Evening</string>
    <string name="night">Night</string>
    <string name="for_lower_battery_usage_set_bigger_values">For lower battery usage, set higher values!</string>
    <string name="saved">Saved</string>
    <string name="voice_control">Voice control</string>
    <string name="image">Image</string>
    <string name="font_style">Font style</string>
    <string name="share">Share</string>
    <string name="copy">Make copy</string>
    <string name="grid_view">Grid view</string>
    <string name="order">Order</string>
    <string name="add_birthday">Add birthday</string>
    <string name="active_reminders">Active reminders</string>
    <string name="events">Events</string>
    <string name="must_be_not_empty">Must be not empty!</string>
    <string name="repeat_limit">Limit of repeats</string>
    <string name="e_mail">E-mail</string>
    <string name="add_reminder_menu">Add reminder</string>
    <string name="refresh">Refresh</string>
    <string name="move_forward">Move forward</string>
    <string name="move_backward">Return back</string>
    <string name="map">Map</string>
    <string name="show_notifications_on_wear_devices">Show notifications on Wear OS devices</string>
    <string name="permanent_notification_icon">Permanent notification icon</string>
    <string name="hide_icon">Hide icon</string>
    <string name="always_showing">Always showing</string>
    <string name="hidden">Hidden</string>
    <string name="do_not_play_melody_in_silent_mode">Do not play melody when phone in silent mode</string>
    <string name="repeat_melody_when_it_ends">Repeat melody when it ends</string>
    <string name="do_not_repeat_melody">Do not repeat melody</string>
    <string name="spell_event_summary">Say event summary instead of playing melody</string>
    <string name="play_melody">Play melody</string>
    <string name="show_led_indication">Show LED indication</string>
    <string name="do_not_show_led_indication">Do not show LED indication</string>
    <string name="do_no_repeat_event_notification">Do not repeat event notification</string>
    <string name="repeat_event_notification_when_no_action">Repeat event notification when no user action</string>
    <string name="show_reminder_about_birthdays">Show reminders about birthdays</string>
    <string name="birthdays_in_home_screen_widget">Birthdays in home screen widget</string>
    <string name="show_when_available_birthdays">Show when available upcoming birthdays</string>
    <string name="retrieve_birthdays_from_contacts">Retrieve birthdays from contacts</string>
    <string name="use_only_my_birthdays">Use only birthdays added by me</string>
    <string name="do_not_scan_contacts">Do not scan contacts</string>
    <string name="automatically_check_for_new_birthdays">Automatically check if there is birthdays in contacts</string>
    <string name="specify_own_configuration">Specify own configuration</string>
    <string name="use_settings_for_reminders">Use settings for reminders</string>
    <string name="do_no_show_notifications_on_wear_devices">Do not show notifications on Wear OS</string>
    <string name="play_melody_in_silent_mode">Play melody when phone in silent mode</string>
    <string name="do_not_remind_about_birthdays">Do not remind about birthdays</string>
    <string name="notes_archive">Archive</string>
    <string name="schedule">Schedule</string>
</resources>