<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.elementary.tasks.core.views.PrefsView
            android:id="@+id/globalOptionPrefs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:prefs_divider_bottom="true"
            app:prefs_primary_text="@string/global_settings"
            app:prefs_secondary_text_off="@string/specify_own_configuration"
            app:prefs_secondary_text_on="@string/use_settings_for_reminders"
            app:prefs_type="check_switch" />

        <com.elementary.tasks.core.views.PrefsView
            android:id="@+id/vibrationOptionPrefs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:prefs_divider_bottom="true"
            app:prefs_primary_text="@string/vibrate"
            app:prefs_icon="@drawable/ic_twotone_vibration_24px"
            app:prefs_type="check_switch" />

        <com.elementary.tasks.core.views.PrefsView
            android:id="@+id/infiniteVibrateOptionPrefs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:prefs_divider_bottom="true"
            app:prefs_primary_text="@string/infinite_vibrate"
            app:prefs_type="check_switch" />

        <com.elementary.tasks.core.views.PrefsView
            android:id="@+id/soundOptionPrefs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:prefs_divider_bottom="true"
            app:prefs_primary_text="@string/sound_in_silent_mode"
            app:prefs_secondary_text_off="@string/do_not_play_melody_in_silent_mode"
            app:prefs_secondary_text_on="@string/play_melody_in_silent_mode"
            app:prefs_type="check_switch" />

        <com.elementary.tasks.core.views.PrefsView
            android:id="@+id/infiniteSoundOptionPrefs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:prefs_divider_bottom="true"
            app:prefs_primary_text="@string/infinite_sound"
            app:prefs_secondary_text_off="@string/do_not_repeat_melody"
            app:prefs_secondary_text_on="@string/repeat_melody_when_it_ends"
            app:prefs_type="check_switch" />

        <com.elementary.tasks.core.views.PrefsView
            android:id="@+id/wakeScreenOptionPrefs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:prefs_divider_bottom="true"
            app:prefs_icon="@drawable/ic_twotone_brightness_high_24px"
            app:prefs_primary_text="@string/turn_on_screen"
            app:prefs_type="check_switch" />

        <com.elementary.tasks.core.views.PrefsView
            android:id="@+id/chooseSoundPrefs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:prefs_divider_bottom="true"
            app:prefs_icon="@drawable/ic_twotone_music_note_24px"
            app:prefs_primary_text="@string/melody"
            app:prefs_type="none" />

        <com.elementary.tasks.core.views.PrefsView
            android:id="@+id/ttsPrefs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:prefs_divider_bottom="true"
            app:prefs_primary_text="@string/voice_notification"
            app:prefs_secondary_text_off="@string/play_melody"
            app:prefs_secondary_text_on="@string/spell_event_summary"
            app:prefs_type="check_switch" />

        <com.elementary.tasks.core.views.PrefsView
            android:id="@+id/localePrefs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:prefs_divider_bottom="true"
            app:prefs_icon="@drawable/ic_twotone_language_24px"
            app:prefs_primary_text="@string/language"
            app:prefs_type="none" />

        <com.elementary.tasks.core.views.PrefsView
            android:id="@+id/ledPrefs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:prefs_divider_bottom="true"
            app:prefs_primary_text="@string/led_notification"
            app:prefs_secondary_text_off="@string/do_not_show_led_indication"
            app:prefs_secondary_text_on="@string/show_led_indication"
            app:prefs_type="check_switch" />

        <com.elementary.tasks.core.views.PrefsView
            android:id="@+id/chooseLedColorPrefs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:prefs_divider_bottom="true"
            app:prefs_primary_text="@string/led_color"
            app:prefs_type="none" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>