<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:colorBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/list_margin"
        android:layout_marginEnd="@dimen/list_margin"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/collapse_toolbar_margin_top" />

        <com.elementary.tasks.core.views.PrefsView
            android:id="@+id/wearPrefs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:prefs_divider_bottom="true"
            app:prefs_icon="@drawable/ic_fluent_watch"
            app:prefs_primary_text="@string/android_wear_notification"
            app:prefs_secondary_text_off="@string/do_no_show_notifications_on_wear_devices"
            app:prefs_secondary_text_on="@string/show_notifications_on_wear_devices"
            app:prefs_type="check_switch" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/status_bar"
            android:textAppearance="?textAppearanceTitleSmall"
            android:textColor="?colorTertiary" />

        <com.elementary.tasks.core.views.PrefsView
            android:id="@+id/permanentNotificationPrefs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:prefs_divider_bottom="true"
            app:prefs_primary_text="@string/permanent_notification"
            app:prefs_secondary_text_off="@string/hidden"
            app:prefs_secondary_text_on="@string/always_showing"
            app:prefs_type="check_switch" />

        <com.elementary.tasks.core.views.PrefsView
            android:id="@+id/statusIconPrefs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:prefs_divider_bottom="true"
            app:prefs_primary_text="@string/permanent_notification_icon"
            app:prefs_secondary_text_off="@string/hide_icon"
            app:prefs_secondary_text_on="@string/show_icon"
            app:prefs_type="check_switch" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/sound_and_vibration"
            android:textAppearance="?textAppearanceTitleSmall"
            android:textColor="?colorTertiary" />

        <com.elementary.tasks.core.views.PrefsView
            android:id="@+id/vibrationOptionPrefs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:prefs_divider_bottom="true"
            app:prefs_icon="@drawable/ic_fluent_phone_vibrate"
            app:prefs_primary_text="@string/vibrate"
            app:prefs_type="check_switch" />

        <com.elementary.tasks.core.views.PrefsView
            android:id="@+id/infiniteVibrateOptionPrefs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:prefs_divider_bottom="true"
            app:prefs_primary_text="@string/infinite_vibrate"
            app:prefs_type="check_switch" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/notification"
            android:textAppearance="?textAppearanceTitleSmall"
            android:textColor="?colorTertiary" />

        <com.elementary.tasks.core.views.PrefsView
            android:id="@+id/delayForPrefs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:prefs_divider_bottom="true"
            app:prefs_icon="@drawable/ic_fluent_alert_snooze"
            app:prefs_primary_text="@string/snooze_time"
            app:prefs_type="none" />

        <com.elementary.tasks.core.views.PrefsView
            android:id="@+id/ledPrefs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:prefs_divider_bottom="true"
            app:prefs_icon="@drawable/ic_builder_led_color"
            app:prefs_primary_text="@string/led_notification"
            app:prefs_pro="true"
            app:prefs_secondary_text_off="@string/do_not_show_led_indication"
            app:prefs_secondary_text_on="@string/show_led_indication"
            app:prefs_type="check_switch" />

        <com.elementary.tasks.core.views.PrefsView
            android:id="@+id/chooseLedColorPrefs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:prefs_divider_bottom="true"
            app:prefs_icon="@drawable/ic_fluent_color"
            app:prefs_primary_text="@string/led_color"
            app:prefs_pro="true"
            app:prefs_type="none" />

        <com.elementary.tasks.core.views.PrefsView
            android:id="@+id/repeatNotificationOptionPrefs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:prefs_divider_bottom="true"
            app:prefs_primary_text="@string/repeat_notification"
            app:prefs_secondary_text_off="@string/do_no_repeat_event_notification"
            app:prefs_secondary_text_on="@string/repeat_event_notification_when_no_action"
            app:prefs_type="check_switch" />

        <com.elementary.tasks.core.views.PrefsView
            android:id="@+id/repeatIntervalPrefs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:prefs_divider_bottom="true"
            app:prefs_primary_text="@string/interval"
            app:prefs_type="none" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_bottom_space" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
