<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.elementary.tasks.core.views.PrefsView
            android:id="@+id/birthReminderPrefs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:prefs_divider_bottom="true"
            app:prefs_primary_text="@string/birthday_reminder"
            app:prefs_secondary_text_on="@string/show_reminder_about_birthdays"
            app:prefs_secondary_text_off="@string/do_not_remind_about_birthdays"
            app:prefs_type="check_switch" />

        <com.elementary.tasks.core.views.PrefsView
            android:id="@+id/widgetShowPrefs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:prefs_divider_bottom="true"
            app:prefs_primary_text="@string/birthdays_in_home_screen_widget"
            app:prefs_secondary_text_on="@string/show_in_home_screen"
            app:prefs_secondary_text_off="@string/do_nothing"
            app:prefs_type="check_switch" />

        <com.elementary.tasks.core.views.PrefsView
            android:id="@+id/birthdayPermanentPrefs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:prefs_divider_bottom="true"
            app:prefs_primary_text="@string/permanent_status_bar_notification"
            app:prefs_secondary_text_on="@string/show_when_available_birthdays"
            app:prefs_secondary_text_off="@string/do_nothing"
            app:prefs_type="check_switch" />

        <com.elementary.tasks.core.views.PrefsView
            android:id="@+id/daysToPrefs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:prefs_divider_bottom="true"
            app:prefs_primary_text="@string/days_to_birthday"
            app:prefs_type="text" />

        <com.elementary.tasks.core.views.PrefsView
            android:id="@+id/reminderTimePrefs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:prefs_divider_bottom="true"
            app:prefs_primary_text="@string/remind_at"
            app:prefs_type="text" />

        <com.elementary.tasks.core.views.PrefsView
            android:id="@+id/birthdayNotificationPrefs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:prefs_divider_bottom="true"
            app:prefs_primary_text="@string/action_settings"
            app:prefs_pro="true"
            app:prefs_type="none" />

        <com.elementary.tasks.core.views.PrefsView
            android:id="@+id/useContactsPrefs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:prefs_divider_bottom="true"
            app:prefs_primary_text="@string/contacts"
            app:prefs_secondary_text_on="@string/retrieve_birthdays_from_contacts"
            app:prefs_secondary_text_off="@string/use_only_my_birthdays"
            app:prefs_type="check_switch" />

        <com.elementary.tasks.core.views.PrefsView
            android:id="@+id/autoScanPrefs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:prefs_divider_bottom="true"
            app:prefs_primary_text="@string/check_automatically"
            app:prefs_secondary_text_on="@string/automatically_check_for_new_birthdays"
            app:prefs_secondary_text_off="@string/do_not_scan_contacts"
            app:prefs_type="check_switch" />

        <com.elementary.tasks.core.views.PrefsView
            android:id="@+id/contactsScanPrefs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:prefs_divider_bottom="true"
            app:prefs_primary_text="@string/scan"
            app:prefs_type="none" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>