<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".creators.CreateReminderActivity">
    <item
        android:id="@+id/action_add"
        android:title="@string/save"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/action_custom_melody"
        android:title="@string/melody"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_volume"
        android:title="@string/loudness"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_custom_radius"
        android:title="@string/radius"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_custom_color"
        android:title="@string/led_color"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_limit"
        android:title="@string/repeat_limit"
        android:visible="true"
        app:showAsAction="never" />
</menu>